--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.13.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
