--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
     "multer": "^1.4.5-lts.1",
-    "pdfkit": "^0.13.0"
+    "nodemailer": "^6.8.0",
+    "pdfkit": "^0.13.0",
+    "twilio": "^3.83.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
