--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "author": "Manprit Tiwari",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1261.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemailer": "^6.8.0",
     "pdfkit": "^0.13.0",
     "twilio": "^3.83.0"
