updated code for layout change and selection

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "node-cron": "^3.0.2",
     "nodemailer": "^6.8.0",
     "pdfkit": "^0.13.0",
-    "twilio": "^3.83.0"
+    "twilio": "^3.83.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
