--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "exceljs": "^4.3.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
